# sandbox

./: .gitignore  README.md
aoc/2024/1/src/: main.zig
aoc/2024/3/src/: main.zig
aoc/2024/4/src/: main.zig
c/: standard_library.md
c/cmake_modular_project/libraries/lib_a/: CMakeLists.txt
c/cmake_modular_project/libraries/lib_c/: CMakeLists.txt
c/cmake_modular_project/modules/module_a/: CMakeLists.txt
c/cmake_modular_project/modules/module_b/: CMakeLists.txt
c/cmake_modular_project/toolchains/: lynxos_toolchain.cmake
c/coverage/gcda_15_2/: main.c
c/coverage/gcov_hello_world/: .clang-format  main.c
c/emulate/: .clang-format  build.py  premake5.lua  readme.md
c/emulate/apps/decode/: main.c
c/emulate/apps/disassemble/: main.c
c/emulate/apps/emulate/: main.c
c/emulate/libraries/device_tree/: readme.md
c/emulate/libraries/emulate_arm/: readme.md
c/emulate/libraries/emulate_riscv/: riscv_isa_notes.md  riscv_privileged_isa_notes.md  (+2 more)
c/emulate/scripts/: format.py
c/emulate_8086/: premake5.lua  readme.md
c/emulate_8086/test/: main.c
c/explorations/: build.bash  padding.c
c/fundamentals/list/: build.bash  build.sh  list.c  list.h  test__list.c
c/graphics/game_engine/: .clang-format  build.zig  compile_commands.txt  compile_flags.txt  readme.md  setup.py
c/graphics/sdl/bterm/: CMakeLists.txt  build.py  readme.md  vcpkg.json
c/graphics/sdl/bterm/cmake/: clay.cmake
c/graphics/sdl/bterm/include/: app.h  app_shared.h  app_window.h  bterm_ui.h  ssh_manager.h
c/graphics/sdl/bterm/source/: app_window.c  bterm_ui.c  main.c  ssh_manager.c
c/graphics/sdl/clay_sandbox/: CMakeLists.txt  build.py  clay-video-demo.c  clay_renderer_SDL3.c  main.c  readme.md
c/graphics/sdl/clay_sandbox/cmake/: clay.cmake  sdl3.cmake  sdl3_image.cmake  sdl3_ttf.cmake
c/graphics/sdl/clay_sandbox/include/: app.h  clay_renderer_sdl3.h  clay_sandbox_ui.h  game.h
c/graphics/sdl/clay_sandbox/source/: clay_renderer_sdl3.c  clay_sandbox_ui.c  game.c  main.c
c/graphics/sdl/sdl3_hello_world/: CMakeLists.txt  build.py  main.c  readme.md
c/graphics/sdl/sdl3_hello_world/cmake/: sdl3.cmake
c/graphics/vulkan/: notes.md
c/networking/ssh_sandbox/: CMakeLists.txt  build.py  readme.md
c/networking/ssh_sandbox/source/: main.c
c/sandbox/: padding.c
c/syscalls/: readme.md
c/syscalls/file_system/: mknod.c
c/syscalls/io/: dup.c
c/tooling/cmake_modular_project/: CMakeLists.txt  README.md  build.bash
c/tooling/cmake_modular_project/libraries/lib_a/include/: lib_a.h
c/tooling/cmake_modular_project/libraries/lib_a/source/: lib_a.c
c/tooling/cmake_modular_project/libraries/lib_b/: CMakeLists.txt
c/tooling/cmake_modular_project/libraries/lib_b/source/: lib_b.c
c/tooling/cmake_modular_project/libraries/lib_c/include/: lib_c.h
c/tooling/cmake_modular_project/libraries/lib_c/source/: lib_c.c
c/tooling/cmake_modular_project/libraries/lib_d/: CMakeLists.txt
c/tooling/cmake_modular_project/libraries/lib_e/: CMakeLists.txt
c/tooling/cmake_modular_project/libraries/lib_e/source/: lib_e.c
c/tooling/cmake_modular_project/modules/module_c/: CMakeLists.txt
c/tooling/cmake_modular_project/modules/module_c/source/: main.c
c/tooling/cmake_modular_project/toolchains/: qnx_toolchain.cmake
c/tooling/cmake_vcpkg_project/: CMakeLists.txt  build.py  readme.md  vcpkg.json
c/tooling/premake_modular_project/: README.md  premake5.lua
cpp/fundamentals/int_array_list/: int_array_list.cpp
cpp/fundamentals/refs/: auto_ptr.cpp
embedded/build_systems/buildroot/: notes.md
embedded/build_systems/yocto/: yocto_notes.md
embedded/peripherals/sensors/: bmp180.md
embedded/qemu/: readme.md
embedded/qemu/arm_minimal_busybox/: build.bash  init  readme.md
glsl/: readme.md
glsl/01_beginner/: 01_hello_world.glsl  02_circles.glsl
godot/4/: readme.md
godot/4/ShellTexturing/: main.tscn  project.godot  readme.md  readme.md.uid
leetcode/easy/: 1_two_sum.cpp  217_contains_duplicate.cpp  26_remove_duplicates_from_sorted_array.cpp  28_find_index_of_first_substring.cpp  338_counting_bits.cpp  35_search_insert_position.cpp  374_guess_number_higher_or_lower.cpp  67_add_binary.cpp  9_palindrome_number.cpp
leetcode/medium/: 155_min_stack.cpp  49_group_anagrams.cpp
notes/: educational_resources.md
notes/design/: performance_data_oriented_design.md
puzzles/aoc/: readme.md
puzzles/aoc/2025/: 01_secret_entrance.c  02_gift_shop.c  03_lobby.c  04_printing_department.c  05_cafeteria.c  06_trash_compactor.c  07_laboratories.c
puzzles/leetcode/: 104_binary_tree_max_depth.cpp  121_best_time_to_buy_and_sell_stock.cpp  128_longest_consecutive_sequence.cpp  13_roman_to_integer.cpp  191_number_of_1_bits.cpp  1_two_sum.cpp  202_happy_number.cpp  217_contains_duplicate.cpp  226_invert_binary_tree.cpp  278_first_bad_version.cpp  374_guess_number_higher_or_lower.cpp  58_last_word_length.cpp  66_plus_one.cpp  6_zigzag_conversion.cpp  83_remove_duplicates_from_sorted_list.cpp
puzzles/project_euler/: 1_multiples_of_3_or_5.c  2_even_fibonacci_numbers.cpp  3_largest_prime_factor.cpp  4_largest_palindrome_product.cpp  5_smallest_multiple.cpp  readme.md
python/: find_in_files.py
python/kafka_testing/: README.md
python/kafka_testing/scripts/: build_all.bash  run_all.bash  stop_and_remove_all.bash
rust/http/: .gitignore  Cargo.toml  README.md
rust/http/examples/benchmarks/: Cargo.toml
rust/http/examples/benchmarks/source/: main.rs
rust/http/examples/hello_world/source/: main.rs
rust/http/scripts/: build.py
rust/http/source/: lib.rs  method.rs  path.rs  protocol.rs  request.rs  response.rs  status_code.rs
rust/http/source/server/: linux_server.rs  mod.rs  server_metrics.rs  windows_server.rs
setup/: .bashrc  dev_machine_setup.md
setup/.config/nvim/: init.lua
setup/.config/tmux/: tmux.conf
zig/hello_world/: build.zig  build.zig.zon
zig/hello_world/src/: main.zig
zig/zlua/: build.zig.zon  readme.md
zig/zlua/src/: ast.zig  builtin.zig  diagnostics.zig  environment.zig  evaluator.zig  main.zig  object.zig  parser.zig  repl.zig  root.zig  tokenizer.zig
(+789 files in other folders)
