[package]
name = "http"
version = "0.0.1"
authors = ["brennennen"]
edition = "2018"

[lib]
name = "http"
path = "source/lib.rs"

[dependencies]
time = "0.1"
chrono = "0.4.19"
log = "0.4.8"
env_logger = "0.7.1"
libc = "0.2.73"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["std", "winsock2", "winnt", "minwindef", "handleapi", "ioapiset"] }
